--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 
 :root{
 	/* colors */
-	--background-color:beige;
+	--background-color:rgb(250, 250, 238);
 	--text-color:#121212;
-	--primary-color:#04AA6D;
+	--primary-color:#BDE662;
 	--secondary-color:white;
 	--accent-color:rgb(142, 142, 142);
 
@@ -46,7 +48,7 @@
 	--max-width-section: 60rem;
 
 	/* shadow */
-	 --box-shadow-primary: 0px 0px 0px 0px #04AA6D, 6px 6px 0px 0px #04AA6D;
+	 --box-shadow-primary: 0px 0px 0px 0px #0BDE662, 6px 6px 0px 0px #BDE662;
 	--box-shadow-hover: 0px 0px 5px rgba(0, 0, 0, 0.2);
 
 	/* button styles */
@@ -71,22 +73,33 @@ body{
 }
 
 aside{
+
 	padding-bottom:var(--spacing-xl);
+}
+
+header{
+	background-color:#BDE662;
+	outline-style:solid;
+	outline-color: black;
+	border-radius:0 0 2% 2% ;
+	padding-bottom:2rem;
 }
 
 /* headings */
 h1{
-	font-family:var(--font-family);
-	font-weight:var(--font-weight-bold);
-	font-size:var(--font-size-h1);
-	line-height:calc(var(--font-size-h1)+1rem);
-	color:var(--text-color);
-	margin:var(--spacing-xl);
+	font-family:var(--font-family-primary);
+	font-size:4rem;
+	font-weight:bold;
+	line-height:calc(var(--font-size-h1)+0.5rem);
+	color:#121212;
+	margin-left:var(--spacing-xl);
+	margin-right:var(--spacing-xl);
+	margin-bottom:2rem;
 }
 
 h2{
-	background-color:var(--primary-color);
-	color:var(--secondary-color);
+	background-color:#BDE662;
+	color:var(--text-color);
 	padding: var(--spacing-md) var(--spacing-md);
 	border-radius:var(--border-radius);
 	outline-style:var(--outline-style);
@@ -109,12 +122,17 @@ h4{
 	margin-right:1.5rem;
 }
 
+h5{
+	font-family:var(--font-family-secondary);
+}
+
 p{
 	font-family:"Roboto Mono", monospace;
 	font-size:1rem;
 	line-height:1.8rem;
 	margin-left:2.25rem;
 	margin-right:2.25rem;
+	margin-top:2.5rem;
 }
 
 #written-by, #duration{
@@ -127,10 +145,20 @@ p{
 	padding-bottom:var(--spacing-lg);
 }
 
+.empty-sticky{
+	background-color:beige;
+	position:sticky;
+	top:0;
+	z-index:auto;
+	max-width:55rem;
+	margin: auto;
+}
+
+
 .sticky-header, #section1{
 	position:sticky;
 	top:2.5rem;
-	z-index:1;
+	z-index:auto;
 }
 
 .article-info{
@@ -143,16 +171,6 @@ p{
 }
 /* aside stylings */
 
-.header{
-	font-family:var(--font-family);
-	font-size:var(--nav-font-size);
-	margin: 2rem;
-	display:flex;
-	justify-content:space-between;
-	flex-direction:row;
-	text-transform: uppercase;
-}
-
 .heading-art{
 	font-family:'Space Grotesk', serif;
 }
@@ -160,9 +178,11 @@ p{
 
 /* header */
 .header{
-	font-family:var(--font-family);
+	font-family:var(--font-family-primary);
 	font-size:var(--nav-font-size);
-	margin:2rem;
+	padding-top:2rem;
+	margin-left:2rem;
+	margin-right:2rem;
 	display:flex;
 	justify-content:space-between;
 	flex-direction:row;
@@ -177,6 +197,7 @@ p{
 
 /* NAV BAR */
 .nav-container {
+	font-family:var(--font-family-primary);
 	overflow: hidden;
 	display: flex;
 	position: fixed;
@@ -222,7 +243,6 @@ details{
 } 
 
 .big-quote{
-	background-color:beige;
 	font-family:'Space Grotesk',serif;
 	font-size:2rem;
 }
@@ -268,16 +288,16 @@ details{
 
 /* next article button */
 #button {
-		font-family:var(--font-family);
+		font-family:var(--font-family-primary);
 		padding-top:0.5rem;
 		padding-bottom:0.5rem;
 		padding-left:0.8rem;
 		padding-right:0.8rem;
 		background-color: white; 
 		color: black; 
-		border: 2px solid #000000;
-		border-radius:0.5rem;
-		margin-left:15rem;
+		border: 1.5px solid #000000;
+		border-radius:0.8rem;
+		margin-left:18rem;
 	}
 	
 #button:hover {
@@ -290,30 +310,35 @@ details{
 /* sticky-aside */
 .sticky-aside {
 	background-color: white;
-	color: black;
-	box-shadow: 0px 0px 0px 0px #04AA6D, 6px 6px 0px 0px #04AA6D;
+	border: solid 2px #121212;
+	box-shadow: 0px 0px 0px 0px #121212, 6px 6px 0px 0px #121212;
 	position: sticky;
 	max-width: 20rem;
 	margin-left: 2rem;
 	margin-right: 2rem;
 	border-radius:0.5rem;
-	border: solid 2px #121212;
+	margin-top:4rem;
+	margin-bottom:2rem;
 }
 
+
+#main-title {display:none;}
+#main-title{
+	font-size:2rem;
+}
 
 #intro{
-	background-color:#04AA6D;
-	color: #ffffff;
+	background-color:#ffffff;
 	outline-style:solid;
 	outline-color: 2px #121212;
-	font-family: "poppins", sans-serif;
 	border-radius:0.5rem;
-	padding-left:0.5rem;
-	padding-right:0.5rem;
-	padding-top:1rem;
-	padding-bottom:1rem;
-	margin-bottom:3rem;
+	padding:1.7rem;
+	margin:2rem;
 }
+
+.full-text { display:none;} 
+
+
 
 @media (min-width:650px){
 	h1{
@@ -327,13 +352,21 @@ details{
 
 /* heading */
 	h1{
+		font-family: var(--font-family-primary);
 		font-size:9.5rem;
 		line-height:9rem;	
-		border-bottom:2rem;
+		margin-left:3.85rem;
+		margin-bottom:4.5rem; 
 	}
 
 	h2 {
 		max-width:60rem;
+	}
+
+	h5{
+		font-size:1rem;
+		line-height:1.8rem;
+		padding:0.5rem;
 	}
 
 p, blockquote {
@@ -352,36 +385,49 @@ article {
 }
 
 /* blockquote */
-	blockquote{
+	.bigger-quote{
+		font-family:var(--font-family-primary);
+		font-size:3rem;
+		padding:1.5rem;
+		margin-left:4rem;
+	}
+
+	.big-quotes{
 		background-color:white;
-		border-left:8px solid #04AA6D;
+		border:2px solid #121212;
+		border-left:10px solid #121212;
+		border-radius:2rem;
 		padding:0.2rem;
 		border-radius:0.5rem;
 		max-width:30rem;
 		margin-left:20rem;
 	}
 
-	blockquote:hover{
+	.big-quotes:hover{
 		background-color:white;
-		border-left:8px solid #04AA6D;
+		border-left:10px solid #121212;
 		padding:0.2rem;
-		border-radius:0.5rem;
-		max-width:30rem;
+		border-radius:0.8rem;
+		max-width:50rem;
 		transition:0.5s;
-		rotate:2deg;
+		margin-top:5rem;
+		margin-bottom:5rem;
+		margin-left:10rem;
+		margin-right:5rem;
 	}
 
-	blockquote p{
-		transition:0.5s;
+	.big-quotes p{
+		font-weight:bolder;
 	}
 
-	blockquote p:hover{
-		background-color:white;
-		color:black;
+	cite{
+		color:grey;
 	}
 
-	blockquote:hover .quote-popup{
-		background-color:black;
+	.big-quotes p:hover{
+		/* transition:0.5s; */
+		font-size:2rem;
+		line-height:3rem;
 	}
 
 a{
@@ -399,6 +445,28 @@ a:hover{
 
 /* CLASS-stylings */
 
+.short-text { display:none;}
+.full-text { display: inline-block;}
+
+#main-title { display:inline-block;}
+
+#main-title{
+	font-family:var(--font-family-primary);
+	font-size:6.5rem;
+	font-weight:600;
+	padding-bottom:2rem;
+}
+
+.big-text:hover{
+	font-size:1.2rem;
+	font-weight:bold;
+}
+
+}
+	/* top nav */
+	.header{
+		margin-bottom:4rem;
+	}
 	/* div aside */
 	.grid {
 		display: grid;
@@ -406,7 +474,7 @@ a:hover{
 		grid-template-areas: 
 		'aside article';
 		column-gap: 1.5rem;
-		padding-top:5rem;
+		padding-top:4rem;
 	}
 	
 	.sticky-aside {
@@ -416,11 +484,11 @@ a:hover{
 		color: black;
 		position: sticky;
 		max-width: 20rem;
+		margin-top:0rem;
 		margin-left: 3rem;
 		margin-right: 2rem;
-		padding-bottom: 1.5rem;
 		border-radius:0.5rem;
-		border: solid 1px black;
+		border: solid 2px black;
 	}
 
 	/* section heading */
@@ -429,28 +497,41 @@ a:hover{
 		margin: auto;
 	}
 
+	.highlighted-text{
+		background-color:#BDE662;
+		opacity:70%;
+	}
+
+	.big-quote{
+		font-family:'Space Grotesk',serif;
+		font-size:2rem;
+	}
+
 /* IDs stylings */
 	#intro{
-		background-color:#04AA6D;
-		color: #ffffff;
-		outline-style:solid;
-		outline-color: 2px #121212;
 		font-family: "poppins", sans-serif;
-		border-radius:0.5rem;
-		padding:0.3rem;
+		max-width:48.5rem;
+		border-radius:1rem;
 		z-index:1;
+		padding:1rem;
+		margin-left:3rem;
 		margin-bottom:3rem;
 	}
 
 	/* h1 styling */
-	#hover-title:hover{
-		color: #04AA6D;
+
+	#strike{
+		background-color:white;
+		opacity:80%;
+		color: #121212;
+		padding:0.2rem;
 	}
 
 	/* next buttons */
 	#button {
 		margin-left: 30rem;
 	}
+
 
 	#button {
 		font-family:var(--font-family);
@@ -469,7 +550,7 @@ a:hover{
 	#button:hover {
 		font-family var(--font-family);
 		font-size:1rem;
-		background-color: #04AA6D;
+		background-color:#BDE662;
 		color:white; 
 		padding-top:0.5rem;
 		padding-bottom:0.5rem;
@@ -484,6 +565,4 @@ a:hover{
 	#citation{
 		font-size:0.9rem;
 	}
-
-@media (min-width:1440px){
 }
